--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Reptetion",
+  "author": "A.C",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3"
